<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="353dp"
        android:layout_height="353dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/applogo" />

    <Button
        android:id="@+id/bCut"
        android:layout_width="108dp"
        android:layout_height="61dp"
        android:layout_marginEnd="10dp"
        android:text="@string/cut"
        app:layout_constraintBottom_toTopOf="@+id/bSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/bRotate"
        android:layout_width="108dp"
        android:layout_height="61dp"
        android:text="@string/rotate"
        app:layout_constraintBottom_toTopOf="@+id/bSave"
        app:layout_constraintEnd_toStartOf="@+id/bCut"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toEndOf="@+id/bFilter"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.505" />

    <Button
        android:id="@+id/bFilter"
        android:layout_width="108dp"
        android:layout_height="61dp"
        android:layout_marginStart="10dp"
        android:text="@string/filters"
        app:layout_constraintBottom_toTopOf="@+id/bExit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/bExit"
        android:layout_width="108dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bSave"
        android:layout_width="108dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toEndOf="@+id/bExit" />

</androidx.constraintlayout.widget.ConstraintLayout>